[tool.poetry]
name = "distml"
version = "0.1.0"
description = ""
authors = ["Chou Hung-Yi <hychou.svm@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.8"
black = "^22.3.0"
isort = "^5.10.1"
yapf = "^0.32.0"
scipy = "^1.7"
pandas = "^1"
numpy = "^1"
matplotlib = "^3.5.1"
joblib = "^1.1.0"
scikit-learn = "^1.0.2"
xgboost = "^1.5.2"
loguru = "^0.6.0"
optuna = "^2.10.0"
tqdm = "^4.64.0"
toml = "^0.10.2"
tensorflow = "^2.8.0"
PyMySQL = "^1.0.2"
seaborn = "^0.11.2"
tensorflow-ranking = "^0.5.0"
tensorflow-datasets = "^4.5.2"
more-itertools = "^8.13.0"
pydantic = "^1.9.0"
pyarrow = "^8.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
